# cloudcasting

./: .copier-answers.yml  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  valid.ipynb
.github/workflows/: ci.yml
configs/validation/: config.yaml  t0_times.yaml
docs/source/: api.rst  conf.py  dataset.rst  download.rst  index.rst  metrics.rst  models.rst  usage.md  usage.rst  utils.rst  validation.rst
examples/: find_2022_t0_val_times.py  find_test_2022_t0_times.py
notebooks/: 03-score_model_demo.ipynb  plotting.ipynb  requirements.txt
scripts/: validate_persistence_model.py  validate_persistence_model_demo.py
src/cloudcast/: __init__.py  __main__.py  cli.py  dataloader.py  download.py  validation.py
src/cloudcasting/: __init__.py  __main__.py  cli.py  constants.py  dataset.py  download.py  metrics.py  models.py  types.py  utils.py  validation.py
tests/: conftest.py  legacy_metrics.py  test_cli.py  test_dataset.py  test_download.py  test_metrics.py  test_models.py  test_validation.py
tests/test_data/: non_hrv_shell.netcdf
